Refactored data prep code into functions within the pipeline. All 3x3 data views plus the table appear to be working well.

--- a/quarto/lfs_dash_style.css
+++ b/quarto/lfs_dash_style.css
@@ -1,11 +1,11 @@
 /*-- scss:rules --*/
 
 selectize-input {
-  width: max-content !important;
+  min-width: 100px !important;
   max-width: 200px;
 }
 
 selectize-dropdown {
-  width: max-content !important;
+  min-width: 100px !important;
   max-width: 200px;
 }
